@@ -74,7 +74,7 @@ struct newt_data {
 
 typedef int (newt_handler)(struct frontend *obj, struct question *q);
 
-#define create_form(scrollbar)          newtForm((scrollbar), NULL, 0)
+#include "config-newt.h"
 
 /*  Horizontal offset between buttons and text box */
 #define TEXT_PADDING 1
@@ -112,8 +112,8 @@ help_text(struct frontend *obj)
     return question_get_text(obj, "debconf/help-line", "<Tab> moves between items; <Space> selects; <Enter> activates buttons");
 }
 
-static void
-create_window(const int width, const int height, const char *title, const char *priority)
+void
+newt_create_window(const int width, const int height, const char *title, const char *priority)
 {
     static const char *sigils[][2] = {
         { "low",      "." },
@@ -142,8 +142,8 @@ create_window(const int width, const int height, const char *title, const char *
     }
 }
 
-static int
-get_text_height(const char *text, int win_width)
+int
+newt_get_text_height(const char *text, int win_width)
 {
     newtComponent textbox, f;
     int t_height;
@@ -177,8 +177,8 @@ get_text_height(const char *text, int win_width)
     return t_height;
 }
 
-static int
-get_text_width(const char *text)
+int
+newt_get_text_width(const char *text)
 {
     int t_width = 0;
     const char *p = text;
@@ -208,7 +208,7 @@ min_window_height(struct question *q, int win_width)
 
     q_ext_text = q_get_extended_description(q);
     if (q_ext_text != NULL)
-        height = get_text_height(q_ext_text, win_width) + 1;
+        height = newt_get_text_height(q_ext_text, win_width) + 1;
     if (strcmp(type, "multiselect") == 0 || strcmp(type, "select") == 0)
         height += 4; // at least three lines for choices + blank line
     else if (strcmp(type, "string") == 0 || strcmp(type, "password") == 0)
@@ -286,7 +286,7 @@ show_separate_window(struct frontend *obj, struct question *q)
     win_width = width-7;
     /*  There are 5 characters for sigils, plus 4 for borders */
     strtruncate(obj->title, win_width-9);
-    t_height = get_text_height(full_description, win_width);
+    t_height = newt_get_text_height(full_description, win_width);
     if (t_height+extra <= height-5)
         win_height = t_height+extra;
     else {
@@ -302,22 +302,22 @@ show_separate_window(struct frontend *obj, struct question *q)
     free(full_description);
     full_description = wrappedtext;
 #endif
-    t_width = get_text_width(full_description);
-    t_width_descr = get_text_width(descr);
+    t_width = newt_get_text_width(full_description);
+    t_width_descr = newt_get_text_width(descr);
     if (t_width_descr > t_width)
         t_width = t_width_descr;
-    t_width_buttons = 2*BUTTON_PADDING + get_text_width(continue_text(obj)) + 2;
+    t_width_buttons = 2*BUTTON_PADDING + newt_get_text_width(continue_text(obj)) + 2;
     if (obj->methods.can_go_back(obj, q))
         //  Add an interspace
-        t_width_buttons += get_text_width(goback_text(obj)) + 3;
+        t_width_buttons += newt_get_text_width(goback_text(obj)) + 3;
     if (t_width_buttons > t_width)
         t_width = t_width_buttons;
     if (win_width > t_width + 2*TEXT_PADDING + t_width_scroll)
         win_width = t_width + 2*TEXT_PADDING + t_width_scroll;
-    t_width_title = get_text_width(obj->title);
+    t_width_title = newt_get_text_width(obj->title);
     if (t_width_title > win_width)
         win_width = t_width_title;
-    create_window(win_width, win_height, obj->title, q->priority);
+    newt_create_window(win_width, win_height, obj->title, q->priority);
     form = create_form(NULL);
     if (format_note)
         newtFormAddComponent(form, newtLabel((win_width - strwidth(descr))/2, 0, descr));
@@ -379,7 +379,7 @@ generic_handler_string(struct frontend *obj, struct question *q, int eflags)
     full_description = wrappedtext;
 #endif
     if (full_description != NULL)
-        t_height = get_text_height(full_description, win_width);
+        t_height = newt_get_text_height(full_description, win_width);
     else
         t_height = 0;
     if (t_height + 6 <= height-5)
@@ -390,19 +390,19 @@ generic_handler_string(struct frontend *obj, struct question *q, int eflags)
         t_width_scroll = 2;
     }
     t_height = win_height - 6;
-    t_width = get_text_width(full_description);
+    t_width = newt_get_text_width(full_description);
     t_width_buttons = 2*BUTTON_PADDING;
     if (obj->methods.can_go_back(obj, q))
         //  Add an interspace
-        t_width_buttons += get_text_width(goback_text(obj)) + 3;
+        t_width_buttons += newt_get_text_width(goback_text(obj)) + 3;
     if (t_width_buttons > t_width)
         t_width = t_width_buttons;
     if (win_width > t_width + 2*TEXT_PADDING + t_width_scroll)
         win_width = t_width + 2*TEXT_PADDING + t_width_scroll;
-    t_width_title = get_text_width(obj->title);
+    t_width_title = newt_get_text_width(obj->title);
     if (t_width_title > win_width)
         win_width = t_width_title;
-    create_window(win_width, win_height, obj->title, q->priority);
+    newt_create_window(win_width, win_height, obj->title, q->priority);
     form = create_form(NULL);
     textbox = newtTextbox(TEXT_PADDING, 1, t_width, t_height, tflags);
     assert(textbox);
@@ -486,11 +486,11 @@ show_multiselect_window(struct frontend *obj, struct question *q, int show_ext_d
     full_description = wrappedtext;
 #endif
     sel_width = strlongest(choices_trans, count);
-    t_width = get_text_width(full_description);
-    t_width_buttons = 2*BUTTON_PADDING + get_text_width(continue_text(obj)) + 2;
+    t_width = newt_get_text_width(full_description);
+    t_width_buttons = 2*BUTTON_PADDING + newt_get_text_width(continue_text(obj)) + 2;
     if (obj->methods.can_go_back(obj, q))
         //  Add an interspace
-        t_width_buttons += get_text_width(goback_text(obj)) + 3;
+        t_width_buttons += newt_get_text_width(goback_text(obj)) + 3;
     if (t_width_buttons > t_width)
         t_width = t_width_buttons;
     //  Truncate too wide items
@@ -511,7 +511,7 @@ show_multiselect_window(struct frontend *obj, struct question *q, int show_ext_d
         t_width = sel_width;
     if (win_width > t_width + 8)
         win_width = t_width + 8;
-    t_width_title = get_text_width(obj->title);
+    t_width_title = newt_get_text_width(obj->title);
     if (t_width_title > win_width)
         win_width = t_width_title;
     if (show_ext_desc && full_description) {
@@ -529,7 +529,7 @@ show_multiselect_window(struct frontend *obj, struct question *q, int show_ext_d
         win_height = height-5;
         sel_height = win_height - t_height - 5;
     }
-    create_window(win_width, win_height, obj->title, q->priority);
+    newt_create_window(win_width, win_height, obj->title, q->priority);
     if (count > sel_height) {
         scrollbar = newtVerticalScrollbar((win_width+sel_width+5)/2, 1+t_height+1, sel_height,
                 NEWT_COLORSET_WINDOW, NEWT_COLORSET_ACTCHECKBOX);
@@ -639,11 +639,11 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
     full_description = wrappedtext;
 #endif
     sel_width = strlongest(choices_trans, count);
-    t_width = get_text_width(full_description);
+    t_width = newt_get_text_width(full_description);
     t_width_buttons = 2*BUTTON_PADDING;
     if (obj->methods.can_go_back(obj, q))
         //  Add an interspace
-        t_width_buttons += get_text_width(goback_text(obj)) + 3;
+        t_width_buttons += newt_get_text_width(goback_text(obj)) + 3;
     if (t_width_buttons > t_width)
         t_width = t_width_buttons;
     //  Truncate too wide items
@@ -664,7 +664,7 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
         t_width = sel_width;
     if (win_width > t_width + 8)
         win_width = t_width + 8;
-    t_width_title = get_text_width(obj->title);
+    t_width_title = newt_get_text_width(obj->title);
     if (t_width_title > win_width)
         win_width = t_width_title;
     if (show_ext_desc && full_description) {
@@ -684,7 +684,7 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
     }
     if (count > sel_height)
         listflags |= NEWT_FLAG_SCROLL;
-    create_window(win_width, win_height, obj->title, q->priority);
+    newt_create_window(win_width, win_height, obj->title, q->priority);
     listbox = newtListbox((win_width-sel_width-3)/2, 1+t_height+1, sel_height, listflags);
     defval = (char *)question_getvalue(q, "");
     for (i = 0; i < count; i++) {
@@ -756,7 +756,7 @@ newt_handler_boolean(struct frontend *obj, struct question *q)
     full_description = wrappedtext;
 #endif
     if (full_description != NULL)
-        t_height = get_text_height(full_description, win_width);
+        t_height = newt_get_text_height(full_description, win_width);
     else
         t_height = 0;
     if (t_height + 4 <= height-5)
@@ -767,22 +767,22 @@ newt_handler_boolean(struct frontend *obj, struct question *q)
         t_width_scroll = 2;
     }
     t_height = win_height - 4;
-    t_width = get_text_width(full_description);
+    t_width = newt_get_text_width(full_description);
     t_width_buttons = 2*BUTTON_PADDING;
-    t_width_buttons += get_text_width(yes_text(obj)) + 3;
-    t_width_buttons += get_text_width(no_text(obj)) + 3;
+    t_width_buttons += newt_get_text_width(yes_text(obj)) + 3;
+    t_width_buttons += newt_get_text_width(no_text(obj)) + 3;
     if (obj->methods.can_go_back(obj, q))
         t_width_buttons += 3;
     if (obj->methods.can_go_back(obj, q))
-        t_width_buttons += get_text_width(goback_text(obj)) + 3;
+        t_width_buttons += newt_get_text_width(goback_text(obj)) + 3;
     if (t_width_buttons > t_width)
         t_width = t_width_buttons;
     if (win_width > t_width + 2*TEXT_PADDING + t_width_scroll)
         win_width = t_width + 2*TEXT_PADDING + t_width_scroll;
-    t_width_title = get_text_width(obj->title);
+    t_width_title = newt_get_text_width(obj->title);
     if (t_width_title > win_width)
         win_width = t_width_title;
-    create_window(win_width, win_height, obj->title, q->priority);
+    newt_create_window(win_width, win_height, obj->title, q->priority);
     form = create_form(NULL);
     textbox = newtTextbox(TEXT_PADDING, 1, t_width, t_height, flags);
     assert(textbox);
@@ -1152,7 +1152,7 @@ newt_progress_info(struct frontend *obj, const char *info)
 
 	newtGetScreenSize(&width, NULL);
 	win_width = width-7;
-	text_height = get_text_height(info, win_width);
+	text_height = newt_get_text_height(info, win_width);
 	if (text_height < 2)
 	    text_height = 2;
 	if (text_height != data->scale_textbox_height) {
