@@ -13,6 +13,10 @@ cdebconf (0.92) UNRELEASED; urgency=low
     question.h, likewise for convenience macros to question.h
   * Make it possible for frontend modules to chain onto the install
     Makefile rule 
+  * Rename some convenience functions in newt.c and unstaticify them, as
+    they are quite convenient when writing plugins.
+  * Install a useful set of headers so it's actually possible to build
+    plugins outside the cdebconf tree.
   
  -- Attilio Fiandrotti <fiandro@tiscali.it>  Sun,  4 Dec 2005 22:44:49 +0100
 
